Correcting the color scheme of the scrollbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,18 +5,18 @@
 ::-webkit-scrollbar-track {
     background: #F1F1F1;
 }
-
+ 
 ::-webkit-scrollbar-thumb {
     background: #45B6B2 ;
     border-radius: 5px;
 }
 
-@supports (scrollbar-color: red blue) {
-    * {
-        scrollbar-color: #9e9e9e #2e2e2e ;
-    }
-}
-
 ::-webkit-scrollbar-thumb:hover {
     background: #9e9e9e;
 }
+
+/* @supports (scrollbar-color: red blue) {
+    * {
+        scrollbar-color: #9e9e9e #2e2e2e ;
+    }
+} */
